--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 }
 
 .heading{
-	@apply text-2xl font-bold text-[#1F212D] dark:text-white flex justify-center border-blue-700 p-2 mx-auto mb-3
+	@apply text-4xl font-bold text-[#1F212D] dark:text-white flex justify-center border-blue-700 p-2 mx-auto mb-3
 }
 
 .inputLabel{
@@ -133,6 +133,10 @@ body {
 	@apply bg-blue-700 hover:bg-blue-600 text-white uppercase py-2 px-4 border border-blue-700 rounded-lg text-sm w-1/2
 }
 
+.white_button{
+	@apply py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700
+}
+
 .class_404{
 	@apply text-4xl font-semibold dark:text-white text-black pt-48 flex justify-center self-center
 }
@@ -156,4 +160,28 @@ body {
 
 .dark .Toastify__toast-theme--dark {
 	background: #38344f !important;
+}
+
+.settings{
+	@apply fill-black dark:fill-white;
+}
+
+.delete{
+	@apply fill-[#e53935];
+}
+
+.table_border{
+	@apply border border-gray-400 px-4 py-2;
+}
+
+.items_content_center{
+	@apply flex justify-center items-center;
+}
+
+.banner_w_radius{
+	@apply border-4 rounded-xl	dark:border-indigo-800 border-double bg-indigo-600 dark:bg-gradient-to-r from-[#081024] to-[#1C3481];
+}
+
+.banner_content{
+	@apply max-w-screen-xl mx-auto px-4 py-3 text-white sm:text-center md:px-8;
 }
